# python_docker

./: .flake8  .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-pull-request.yml
notebooks/: main.ipynb  sample.ipynb
src/: main.py
src/python_docker/: __init__.py  main.py
tests/: test_main.py
