[project]
name = "python-docker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ipykernel>=6.28.0",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "python_docker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_docker"]

[tool.black]
line-length = 79
