[project]
name = "python-docker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ipykernel>=6.28.0",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "python_docker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.1.15",
]

[tool.rye.scripts]
fmt = { chain = ["ruff format ./src ./tests"]}
lint = { chain = [
    "ruff check --fix ./src ./tests",
    "mypy ./src ./tests"
]}
test = { chain = ["pytest ./tests"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_docker"]
