[project]
name = "python-docker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "python_docker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.7",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
]

[tool.rye.scripts]
fmt = { chain = ["ruff format ./src ./tests"]}
lint = { chain = [
    "ruff check --fix ./src ./tests",
    "mypy ./src ./tests"
]}
test = { chain = ["pytest ./tests"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_docker"]
